<resources>
    <string name="app_name">c_factorial</string>
    <string name="calculadora_factorial">Calculadora Factorial</string>
    <string name="con_ayuda_del_teclado_digite_un_numero_entero_y_presione_el_boton_del_factorial">Con ayuda del teclado digite un numero entero y presione el boton del factorial</string>
    <string name="ingresa_el_numero_natural">Ingresa el numero natural</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="limpiar">Limpiar</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="factorial">!</string>
    <string name="equal">=</string>
</resources>